fixed bug where slider on blogpost did not fit screen width on mobile widths, improved mobile experience of slider

--- a/_sass/blog/_slider.scss
+++ b/_sass/blog/_slider.scss
@@ -100,14 +100,16 @@
     bottom: 0;
     z-index: 1;
     left: 0;
-    height: 70px;
-    width: 30px;
+    height: 100%;
+    width: 70px;
     background: rgba(0,0,0,0.1);
     -webkit-appearance: none;
-    @include media-query($small){
+    @include media-query(850px){
       left: calc(100% + 2px);
       right: unset;
       bottom: 0px;
+      height: 70px;
+      width: 30px;
       background: $dark-color;
     };
     &:before,
@@ -137,7 +139,7 @@
   right: 0;
   bottom: 0;
   left: unset;
-  @include media-query($small){
+  @include media-query(850px){
     left: calc(100% + 2px);
     bottom: 72px;
   };
